@@ -3,6 +3,7 @@ mosquitto (1.5.4-2) unstable; urgency=medium
   * debian/patches/914525.patch : Use pkg-config to get systemd libs
     (Closes: #914525)
     - This is needed to allow compilation on non-Linux systems.
+  * Fix FTCBFS: Let dh_auto_build pass cross tools to make. (Closes: #914593)
 
  -- Roger A. Light <roger@atchoo.org>  Sun, 25 Nov 2018 13:52:16 +0000
 
